--- a/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Base.lproj/Main.storyboard
@@ -106,6 +106,11 @@
                                 <action selector="logoutButtonTapped:" destination="Dkv-pX-WR7" id="sf9-Lh-M89"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="D9P-MQ-lJU">
+                            <connections>
+                                <action selector="addMovieButtonTapped:" destination="Dkv-pX-WR7" id="grr-iS-1ZZ"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </tableViewController>
