Reduxify movie list

--- a/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pCY-jd-TQc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pCY-jd-TQc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -123,10 +123,10 @@
             </objects>
             <point key="canvasLocation" x="-484" y="-27.436281859070466"/>
         </scene>
-        <!--Movies View Controller-->
+        <!--Movie List View Controller-->
         <scene sceneID="out-E7-EZd">
             <objects>
-                <tableViewController storyboardIdentifier="MoviesViewController" id="Dkv-pX-WR7" customClass="MoviesViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="MovieListViewController" id="Dkv-pX-WR7" customClass="MovieListViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="PbZ-GC-6Of">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -139,12 +139,12 @@
                     <navigationItem key="navigationItem" id="awP-UR-U2J">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="HO2-u3-ZsD">
                             <connections>
-                                <action selector="logoutButtonTapped:" destination="Dkv-pX-WR7" id="sf9-Lh-M89"/>
+                                <action selector="logoutButtonTapped:" destination="Dkv-pX-WR7" id="4oL-IZ-fBx"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="D9P-MQ-lJU">
                             <connections>
-                                <action selector="addMovieButtonTapped:" destination="Dkv-pX-WR7" id="grr-iS-1ZZ"/>
+                                <action selector="addMovieButtonTapped:" destination="Dkv-pX-WR7" id="eg0-5n-mpf"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
