--- a/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pCY-jd-TQc">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="pCY-jd-TQc">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,27 +20,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hgY-6M-65K">
-                                <rect key="frame" x="87.5" y="257" width="200" height="153"/>
+                                <rect key="frame" x="87.5" y="253" width="200" height="161"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Z5b-78-Cmy">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="75"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="83"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LCy-A8-2i0">
-                                                <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
-                                                <nil key="textColor"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="200" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vnd-Vo-jSu">
-                                                <rect key="frame" x="0.0" y="45" width="200" height="30"/>
-                                                <nil key="textColor"/>
+                                                <rect key="frame" x="0.0" y="49" width="200" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="iM8-Vo-MIx">
-                                        <rect key="frame" x="0.0" y="95" width="200" height="58"/>
+                                        <rect key="frame" x="0.0" y="103" width="200" height="58"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rML-fX-XgP">
                                                 <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
@@ -74,7 +70,7 @@
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="AgI-wV-OUJ">
-                                <rect key="frame" x="93.5" y="154.5" width="188" height="62.5"/>
+                                <rect key="frame" x="93.5" y="150.5" width="188" height="62.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hint" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PEo-k9-zLz">
                                         <rect key="frame" x="0.0" y="0.0" width="188" height="14.5"/>
@@ -115,7 +111,10 @@
                     </view>
                     <navigationItem key="navigationItem" id="Qic-dl-hHc"/>
                     <connections>
+                        <outlet property="forgotPasswordButton" destination="rBM-1E-V29" id="QO5-is-UaJ"/>
+                        <outlet property="loginButton" destination="rML-fX-XgP" id="e7f-mL-Fih"/>
                         <outlet property="passwordField" destination="vnd-Vo-jSu" id="M9N-T4-odl"/>
+                        <outlet property="signUpButton" destination="aai-jg-791" id="OUx-Ad-pVP"/>
                         <outlet property="usernameField" destination="LCy-A8-2i0" id="aZW-Tq-CSJ"/>
                     </connections>
                 </viewController>
@@ -124,35 +123,52 @@
             <point key="canvasLocation" x="-484" y="-27.436281859070466"/>
         </scene>
         <!--Movie List View Controller-->
-        <scene sceneID="out-E7-EZd">
+        <scene sceneID="JPv-xN-f3j">
             <objects>
-                <tableViewController storyboardIdentifier="MovieListViewController" id="Dkv-pX-WR7" customClass="MovieListViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="PbZ-GC-6Of">
+                <viewController storyboardIdentifier="MovieListViewController" id="OA2-jm-vXa" customClass="MovieListViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Dwd-nG-9G4"/>
+                        <viewControllerLayoutGuide type="bottom" id="vBe-G7-ocG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gPg-pX-aeZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <connections>
-                            <outlet property="dataSource" destination="Dkv-pX-WR7" id="GrO-f1-jTD"/>
-                            <outlet property="delegate" destination="Dkv-pX-WR7" id="a6i-I9-heN"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="awP-UR-U2J">
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="U7c-Pw-DV0">
+                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="vBe-G7-ocG" firstAttribute="top" secondItem="U7c-Pw-DV0" secondAttribute="bottom" id="B8p-Du-IYH"/>
+                            <constraint firstAttribute="trailing" secondItem="U7c-Pw-DV0" secondAttribute="trailing" id="Uet-6o-kvw"/>
+                            <constraint firstItem="U7c-Pw-DV0" firstAttribute="top" secondItem="Dwd-nG-9G4" secondAttribute="bottom" id="ZWC-UR-zAQ"/>
+                            <constraint firstItem="U7c-Pw-DV0" firstAttribute="leading" secondItem="gPg-pX-aeZ" secondAttribute="leading" id="mwM-PY-jKa"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="e6T-WS-x3z">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="HO2-u3-ZsD">
                             <connections>
-                                <action selector="logoutButtonTapped:" destination="Dkv-pX-WR7" id="sf9-Lh-M89"/>
+                                <action selector="logoutButtonTapped:" destination="OA2-jm-vXa" id="mtM-f2-hZ4"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="D9P-MQ-lJU">
                             <connections>
-                                <action selector="addMovieButtonTapped:" destination="Dkv-pX-WR7" id="grr-iS-1ZZ"/>
+                                <action selector="addMovieButtonTapped:" destination="OA2-jm-vXa" id="0qn-58-0Ti"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Q6n-rS-6NF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                    <connections>
+                        <outlet property="addBarButton" destination="D9P-MQ-lJU" id="BRn-yH-c4U"/>
+                        <outlet property="logoutBarButton" destination="HO2-u3-ZsD" id="5hJ-gD-ROe"/>
+                        <outlet property="tableView" destination="U7c-Pw-DV0" id="d8m-Xr-nCb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2UE-in-f2q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="438" y="-27"/>
+            <point key="canvasLocation" x="244" y="-27"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2p5-dA-eZ3">
@@ -160,7 +176,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="pCY-jd-TQc" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="wHt-79-wNx">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
